--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
   <body>
 
-<a href="">C</a>
+<a href="https://www.truehomes24.com/"> </a>
+<a href="https://www.bauc14.edu.iq/"> </a>
 
 </body>
 </html>
